--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Kode+Mono&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
+    </style>
     <title>React App</title>
   </head>
   <body>
